--- a/ShikShaq/Views/Login/Index.cshtml
+++ b/ShikShaq/Views/Login/Index.cshtml
@@ -1,17 +1,23 @@
-﻿
+﻿@model ShikShaq.Models.User
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <link href="~/CSS/login.css" rel="stylesheet" type="text/css">
+<link href="~/CSS/login.css" rel="stylesheet" type="text/css">
+
+@using (Html.BeginForm("Autherize", "Login" , FormMethod.Post))
+{
     <section class="login-page">
         <section class="form">
             <form class="login-form">
-                <input type="text" placeholder="username" />
-                <input type="password" placeholder="password" />
+                @Html.EditorFor(model => model.email, new { htmlAttributes = new { placeholder = Html.DisplayNameFor(model => model.email) } })
+                @Html.EditorFor(model => model.password, new { htmlAttributes = new { placeholder = Html.DisplayNameFor(model => model.password) } })
+
                 <button>login</button>
                 <p class="message">Not registered? <a href="#">Create an account</a></p>
             </form>
         </section>
     </section>
+}
+
 
