--- a/ShikShaq/Views/Orders/Create.cshtml
+++ b/ShikShaq/Views/Orders/Create.cshtml
@@ -17,6 +17,18 @@
                 <input asp-for="OrderDate" class="form-control" />
                 <span asp-validation-for="OrderDate" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="User" class="control-label"></label>
+                <select name="UserId" class="form-control" asp-items="@ViewBag.Users"></select>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Branch" class="control-label"></label>
+                <select name="BranchId" class="form-control" asp-items="@ViewBag.Branches"></select>
+            </div>
+
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
