--- a/ShikShaq/Views/Orders/Details.cshtml
+++ b/ShikShaq/Views/Orders/Details.cshtml
@@ -16,6 +16,12 @@
         <dd>
             @Html.DisplayFor(model => model.OrderDate)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Name)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Name)
+        </dd>
     </dl>
 </div>
 <div>
