--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -1,9 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ShikShaq</title>
+
+    <link href="~/css/main.css" rel="stylesheet" type="text/css">
+    <link href="~/css/navbar.css" rel="stylesheet" type="text/css">
+
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -17,25 +23,49 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ShikShaq</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+    <nav id="navigation">
+        <a href="#" class="logo">Shik Shaq</a>
+        <ul class="links">
+            <li class="dropdown"><a href="#" class="trigger-drop" >About</a></li>
+            <li class="dropdown">
+                <a href="#" class="trigger-drop">Work<i class="arrow"></i></a>
+                <ul class="drop">
+                    <li><a href="#">Art</a></li>
+                    <li><a href="#">Photography</a></li>
+                    <li><a href="#">Audio</a></li>
+                    <li><a href="#">Films</a></li>
                 </ul>
-            </div>
-        </div>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="trigger-drop">Contact<i class="arrow"></i></a>
+                <ul class="drop">
+                    <li><a href="#">Email</a></li>
+                    <li><a href="#">Phone</a></li>
+                </ul>
+            </li>
+
+            @{ int? userId = Context.Session.GetInt32("userId"); }
+
+            @if (userId > 0)
+            {
+                <li class="dropdown">
+                    <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
+                    <ul class="drop">
+                        <li><a href="#">My Details</a></li>
+                        <li><a href="#">My Cart</a></li>
+                        <li><a href="#">Edit Details</a></li>
+                        <li><a href="#">Logout</a></li>
+                    </ul>
+                </li>
+            }
+            else
+            {
+                <li class="dropdown"><a href="#" class="trigger-drop">Login</a></li>
+            }
+
+
+
+        </ul>
     </nav>
 
     <partial name="_CookieConsentPartial" />
@@ -70,5 +100,7 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+
+    @RenderSection("Styles", false)
 </body>
 </html>
