--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -26,23 +26,28 @@
     <nav id="navigation">
         <a href="#" class="logo">Shik Shaq</a>
         <ul class="links">
-            <li class="dropdown"><a href="#" class="trigger-drop" >About</a></li>
+            <li class="dropdown"><a href="#" class="trigger-drop">About</a></li>
             <li class="dropdown">
-                <a href="#" class="trigger-drop">Work<i class="arrow"></i></a>
+                <a href="#" class="trigger-drop">Products<i class="arrow"></i></a>
                 <ul class="drop">
-                    <li><a href="#">Art</a></li>
-                    <li><a href="#">Photography</a></li>
-                    <li><a href="#">Audio</a></li>
-                    <li><a href="#">Films</a></li>
+                    <li><a href="#">All Products</a></li>
+                    <li><a href="#">Find Product</a></li>
                 </ul>
             </li>
-            <li class="dropdown">
-                <a href="#" class="trigger-drop">Contact<i class="arrow"></i></a>
-                <ul class="drop">
-                    <li><a href="#">Email</a></li>
-                    <li><a href="#">Phone</a></li>
-                </ul>
-            </li>
+
+            @{ string isAdmin = Context.Session.GetString("isUserAdmin"); }
+
+            @if (isAdmin != null && isAdmin.Equals("Y"))
+            {
+                <li class="dropdown">
+                    <a href="#" class="trigger-drop">Administration<i class="arrow"></i></a>
+                    <ul class="drop">
+                        <li><a href="#">Manage Users</a></li>
+                        <li><a href="#">Manage Products</a></li>
+                        <li><a href="#">Statistics</a></li>
+                    </ul>
+                </li>
+            }
 
             @{ int? userId = Context.Session.GetInt32("userId"); }
 
@@ -53,14 +58,14 @@
                     <ul class="drop">
                         <li><a href="#">My Details</a></li>
                         <li><a href="#">My Cart</a></li>
-                        <li><a href="#">Edit Details</a></li>
-                        <li><a href="#">Logout</a></li>
+                        <li><a href="#">My Orders</a></li>
+                        <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
                     </ul>
                 </li>
             }
             else
             {
-                <li class="dropdown"><a href="#" class="trigger-drop">Login</a></li>
+                <li class="dropdown"><a asp-controller="Account" asp-action="Login" method="get" class="trigger-drop">Login</a></li>
             }
 
 
