--- a/ShikShaq/Views/Branches/Index.cshtml
+++ b/ShikShaq/Views/Branches/Index.cshtml
@@ -9,6 +9,17 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-action="Search" class="form-inline">
+    <div class="form-group">
+        <label class="control-label mr-2">Enter branch name</label>
+        <input name="name" class="form-control  mr-2" />
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Search" class="btn btn-default" />
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
