--- a/ShikShaq/Views/Products/Index.cshtml
+++ b/ShikShaq/Views/Products/Index.cshtml
@@ -9,6 +9,29 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-action="Search">
+    <div class="form-group">
+        <label class="control-label mr-2">Enter name</label>
+        <input name="name" class="form-control  mr-2" style="width:30%" />
+    </div>
+    <div class="form-group">
+        <label class="control-label mr-2">Enter description</label>
+        <input name="description" class="form-control  mr-2" style="width:30%"/>
+    </div>
+    <div class="form-group">
+        <label class="control-label mr-2">Enter color</label>
+        <input name="color" class="form-control  mr-2" style="width:30%"/>
+    </div>
+    <div class="form-group">
+        <label class="control-label mr-2">Enter price</label>
+        <input name="price" class="form-control  mr-2" style="width:30%"/>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Search" class="btn btn-default" />
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
