create user details route

--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                 <li class="dropdown">
                     <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
                     <ul class="drop">
-                        <li><a href="#">My Details</a></li>
+                        <li><a href="/users/Details/@userId">My Details</a></li>
                         <li><a href="#">My Cart</a></li>
                         <li><a href="#">My Orders</a></li>
                         <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
