--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <nav id="navigation">
         <a href="#" class="logo">Shik Shaq</a>
         <ul class="links">
-            <li class="dropdown"><a href="#" class="trigger-drop">About</a></li>
+            <li class="dropdown"><a href="/home/about" class="trigger-drop">About</a></li>
             <li class="dropdown">
                 <a href="#" class="trigger-drop">Products<i class="arrow"></i></a>
                 <ul class="drop">
