Create more welcoming about page

--- a/ShikShaq/Views/Home/About.cshtml
+++ b/ShikShaq/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Shik-Shaq, it's about you becoming greater and stronger!";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h3>@ViewData["Title"]</h3>
+<p>We, in ShikShaq truly believe that you can maximize yourself, through our intense and dedicated training programs.</p>
+<p>Feel free to consult our experienced coaches and to buy quality products on our site!</p>
 
-<p>Use this area to provide additional information.</p>
+
