Change some text in about page

--- a/ShikShaq/Views/Home/About.cshtml
+++ b/ShikShaq/Views/Home/About.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Shik-Shaq, it's about you becoming greater and stronger!";
 }
 <h3>@ViewData["Title"]</h3>
-<p>We, in ShikShaq truly believe that you can maximize yourself, through our intense and dedicated training programs.</p>
-<p>Feel free to consult our experienced coaches and to buy quality products on our site!</p>
+<p>We, in ShikShaq, truly believe that you can maximize yourself, through our intense and dedicated training programs.</p>
+<p>Feel free to consult our experienced coaches and to buy quality products on our website!</p>
 
 
