Add an example video in about page

--- a/ShikShaq/Views/Home/About.cshtml
+++ b/ShikShaq/Views/Home/About.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Shik-Shaq, it's about you becoming greater and stronger!";
+    ViewData["Title"] = "Shik-Shaq";
 }
-<h3>@ViewData["Title"]</h3>
+    <h3><b>@ViewData["Title"]</b>, it's about you becoming greater and stronger!</h3>
+<br/>
 <p>We, in ShikShaq, truly believe that you can maximize yourself, through our intense and dedicated training programs.</p>
 <p>Feel free to consult our experienced coaches and to buy quality products on our website!</p>
-
-
+<br/><br />
+    
+    
+<b><p>Look at one of our students plays</p></b>
+<video id="videoplayer" src="@Url.Content("~/videos/about-video.mp4")" controls="true" width="440" height="250" loop />
