--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -39,36 +39,36 @@
 
             @if (isAdmin != null && isAdmin.Equals("Y"))
             {
-                <li class="dropdown">
-                    <a href="#" class="trigger-drop">Administration<i class="arrow"></i></a>
-                    <ul class="drop">
-                        <li><a href="/users">Manage Users</a></li>
-                        <li><a href="/products">Manage Products</a></li>
-                        <li><a href="/orders">Manage Orders</a></li>
-                        <li><a href="/branches">Manage Branches</a></li>
-                        <li><a href="/tags">Manage Tags</a></li>
-                        <li><a href="#">Statistics</a></li>
-                    </ul>
-                </li>
+            <li class="dropdown">
+                <a href="#" class="trigger-drop">Administration<i class="arrow"></i></a>
+                <ul class="drop">
+                    <li><a href="/users">Manage Users</a></li>
+                    <li><a href="/products">Manage Products</a></li>
+                    <li><a href="/orders">Manage Orders</a></li>
+                    <li><a href="/branches">Manage Branches</a></li>
+                    <li><a href="/tags">Manage Tags</a></li>
+                    <li><a href="#">Statistics</a></li>
+                </ul>
+            </li>
             }
 
             @{ int? userId = Context.Session.GetInt32("userId"); }
 
             @if (userId > 0)
             {
-                <li class="dropdown">
-                    <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
-                    <ul class="drop">
-                        <li><a href="/users/Details/@userId">My Details</a></li>
-                        <li><a href="#">My Cart</a></li>
-                        <li><a href="#">My Orders</a></li>
-                        <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
-                    </ul>
-                </li>
+            <li class="dropdown">
+                <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
+                <ul class="drop">
+                    <li><a href="/users/Details/@userId">My Details</a></li>
+                    <li><a href="#">My Cart</a></li>
+                    <li><a href="#">My Orders</a></li>
+                    <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
+                </ul>
+            </li>
             }
             else
             {
-                <li class="dropdown"><a asp-controller="Account" asp-action="Login" method="get" class="trigger-drop">Login</a></li>
+            <li class="dropdown"><a asp-controller="Account" asp-action="Login" method="get" class="trigger-drop">Login</a></li>
             }
 
 
@@ -90,6 +90,20 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script>
+            var map;
+            function initMap() {
+                // Center map at college of management
+                mapCenter = { lat: 31.969738, lng: 34.7749759 };
+
+                map = new google.maps.Map(document.getElementById('map'), {
+                    center: mapCenter,
+                    zoom: 12
+                });
+            }; 
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCYy3vaPn7Dnb994s30XZHwqj2hdqXqTv4&callback=initMap"
+                async defer></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
