--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
     <nav id="navigation">
         <a href="#" class="logo">Shik Shaq</a>
         <ul class="links">
+            <li class="dropdown"><a href="/games" class="trigger-drop">Scores</a></li>
             <li class="dropdown"><a href="/home/about" class="trigger-drop">About</a></li>
             <li class="dropdown">
                 <a href="#" class="trigger-drop">Products<i class="arrow"></i></a>
@@ -88,22 +89,11 @@
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <link href="~/lib/jquery-data/dist/jquery.dataTables.min.css" rel="stylesheet" type="text/css">
+        <script src="~/lib/jquery-data/dist/jquery.dataTables.min.js"></script>
+
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
-        <script>
-            var map;
-            function initMap() {
-                // Center map at college of management
-                mapCenter = { lat: 31.969738, lng: 34.7749759 };
-
-                map = new google.maps.Map(document.getElementById('map'), {
-                    center: mapCenter,
-                    zoom: 12
-                });
-            }; 
-        </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCYy3vaPn7Dnb994s30XZHwqj2hdqXqTv4&callback=initMap"
-                async defer></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
