--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
             <div id="fb-root"></div>
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
 
-            <div class="fb-like" data-href="https://www.facebook.com/nba" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="false"></div>
+            <p>Like our facebook page: </p><div class="fb-like" data-href="https://www.facebook.com/nba" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="false"></div>
         </footer>
     </div>
 
