--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Http;
+@using System.Security.Claims
 
 <!DOCTYPE html>
 <html>
@@ -38,38 +39,38 @@
 
             @{ string isAdmin = Context.Session.GetString("isUserAdmin"); }
 
-            @if (isAdmin != null && isAdmin.Equals("Y"))
+            @if (isAdmin != null && isAdmin.Equals("Y") && User.Identity.IsAuthenticated && User.HasClaim(ClaimTypes.Role, "Admin"))
             {
-            <li class="dropdown">
-                <a href="#" class="trigger-drop">Administration<i class="arrow"></i></a>
-                <ul class="drop">
-                    <li><a href="/users">Manage Users</a></li>
-                    <li><a href="/products">Manage Products</a></li>
-                    <li><a href="/orders">Manage Orders</a></li>
-                    <li><a href="/branches">Manage Branches</a></li>
-                    <li><a href="/tags">Manage Tags</a></li>
-                    <li><a href="#">Statistics</a></li>
-                </ul>
-            </li>
+                <li class="dropdown">
+                    <a href="#" class="trigger-drop">Administration<i class="arrow"></i></a>
+                    <ul class="drop">
+                        <li><a href="/users">Manage Users</a></li>
+                        <li><a href="/products">Manage Products</a></li>
+                        <li><a href="/orders">Manage Orders</a></li>
+                        <li><a href="/branches">Manage Branches</a></li>
+                        <li><a href="/tags">Manage Tags</a></li>
+                        <li><a asp-controller="Statistics" asp-action="Index" method="get">Statistics</a></li>
+                    </ul>
+                </li>
             }
 
             @{ int? userId = Context.Session.GetInt32("userId"); }
 
             @if (userId > 0)
             {
-            <li class="dropdown">
-                <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
-                <ul class="drop">
-                    <li><a href="/users/Details/@userId">My Details</a></li>
-                    <li><a href="#">My Cart</a></li>
-                    <li><a href="#">My Orders</a></li>
-                    <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
-                </ul>
-            </li>
+                <li class="dropdown">
+                    <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
+                    <ul class="drop">
+                        <li><a href="/users/Details/@userId">My Details</a></li>
+                        <li><a href="#">My Cart</a></li>
+                        <li><a href="#">My Orders</a></li>
+                        <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
+                    </ul>
+                </li>
             }
             else
             {
-            <li class="dropdown"><a asp-controller="Account" asp-action="Login" method="get" class="trigger-drop">Login</a></li>
+                <li class="dropdown"><a asp-controller="Account" asp-action="Login" method="get" class="trigger-drop">Login</a></li>
             }
 
 
