--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -7,9 +7,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ShikShaq</title>
+    <meta property="og:url" content="https://localhost:44318/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Just Ordered In Shik Shaq Sport Store!" />
+    <meta property="og:description" content="If you want to be healty, come to Shik Shaq Store!" />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Sport_balls.svg/400px-Sport_balls.svg.png" />
 
     <link href="~/css/main.css" rel="stylesheet" type="text/css">
     <link href="~/css/navbar.css" rel="stylesheet" type="text/css">
+
+    <!-- Facebook Featchers -->
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
 
 
     <environment include="Development">
@@ -86,7 +94,6 @@
         <footer>
             <p>&copy; 2020 - ShikShaq</p>
             <div id="fb-root"></div>
-            <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
 
             <p>Like our facebook page: </p><div class="fb-like" data-href="https://www.facebook.com/nba" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="false"></div>
         </footer>
