--- a/ShikShaq/Views/Home/About.cshtml
+++ b/ShikShaq/Views/Home/About.cshtml
@@ -15,7 +15,7 @@
         </div>
         <div class="col-md-6">
             <p><b>Check out our branches locations</b></p>
-            <div id="map" style="width: 400px; height: 300px"></div>>
+            <div id="map" style="width: 400px; height: 300px"></div>
         </div>
     </div>
 </div>
@@ -24,14 +24,42 @@
 {
     <script>
         var map;
+
+        // Adds a marker to the map.
+        function addMarker(location, map, title) {
+            // Add the marker at the clicked location, and add the next-available label
+            // from the array of alphabetical characters.
+            var marker = new google.maps.Marker({
+                position: location,
+                animation: google.maps.Animation.DROP,
+                title: title,
+                map: map
+            });
+
+            marker.setMap(map);
+            marker.addListener('click', toggleBounce);
+        }
+
+        function toggleBounce() {
+            if (this.getAnimation() !== null) {
+                this.setAnimation(null);
+            } else {
+                this.setAnimation(google.maps.Animation.BOUNCE);
+            }
+        }
+
         function initMap() {
             // Center map at college of management
             mapCenter = { lat: 31.969738, lng: 34.7749759 };
+            mapCenter2 = { lat: 31.979838, lng: 34.7648759 };
 
             map = new google.maps.Map(document.getElementById('map'), {
                 center: mapCenter,
                 zoom: 12
             });
+
+            addMarker(mapCenter, map, "b");
+            addMarker(mapCenter2, map, "a");
         };
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCYy3vaPn7Dnb994s30XZHwqj2hdqXqTv4&callback=initMap"
