feat: finish cart design

--- a/ShikShaq/Views/Account/Cart.cshtml
+++ b/ShikShaq/Views/Account/Cart.cshtml
@@ -61,8 +61,8 @@
     </div>
 
     <button class="checkout">Checkout</button>
-    <button class="checkout">Save Changes</button>
-    <button class="checkout">Clear Cart</button>
+    <button class="save">Save Changes</button>
+    <button class="clear">Clear Cart</button>
 
 </section>
 
