styling details pages by adding css

--- a/ShikShaq/Views/Products/Details.cshtml
+++ b/ShikShaq/Views/Products/Details.cshtml
@@ -40,3 +40,9 @@
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Styles
+{
+    <link href="~/css/details.css" rel="stylesheet" type="text/css">
+}
+
