--- a/ShikShaq/Views/Users/SimpleUserDetails.cshtml
+++ b/ShikShaq/Views/Users/SimpleUserDetails.cshtml
@@ -52,3 +52,9 @@
 <div>
     <a asp-action="SimpleUserEdit" asp-route-id="@Model.Id">Edit</a> |
 </div>
+
+@section Styles
+{
+    <link href="~/css/details.css" rel="stylesheet" type="text/css">
+}
+
