--- a/ShikShaq/Views/Tags/Details.cshtml
+++ b/ShikShaq/Views/Tags/Details.cshtml
@@ -22,3 +22,8 @@
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Styles
+{
+    <link href="~/css/details.css" rel="stylesheet" type="text/css">
+}
