--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <meta property="og:description" content="If you want to be healty, come to Shik Shaq Store!" />
     <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Sport_balls.svg/400px-Sport_balls.svg.png" />
 
-    <link href="~/css/main.css" rel="stylesheet" type="text/css">
+    
     <link href="~/css/navbar.css" rel="stylesheet" type="text/css">
 
     <script src="~/js/navbar.js"></script>
@@ -47,45 +47,6 @@
                     </ul>
                 </li>
 
-                { string isAdmin = Context.Session.GetString("isUserAdmin"); }
-
-               if (isAdmin != null && isAdmin.Equals("Y") && User.Identity.IsAuthenticated && User.HasClaim(ClaimTypes.Role, "Admin"))
-                {
-                    <li class="dropdown">
-                        <a href="#" class="trigger-drop">Administration<i class="arrow"></i></a>
-                        <ul class="drop">
-                            <li><a href="/users">Manage Users</a></li>
-                            <li><a href="/products">Manage Products</a></li>
-                            <li><a href="/orders">Manage Orders</a></li>
-                            <li><a href="/branches">Manage Branches</a></li>
-                            <li><a href="/tags">Manage Tags</a></li>
-                            <li><a asp-controller="Statistics" asp-action="Index" method="get">Statistics</a></li>
-                        </ul>
-                    </li>
-                }
-
-              { int? userId = Context.Session.GetInt32("userId"); }
-
-                if (userId > 0)
-                {
-                    <li class="dropdown">
-                        <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
-                        <ul class="drop">
-                            <li><a href="/users/SimpleUserDetails/userId">My Details</a></li>
-                            <li><a asp-controller="Account" asp-action="Cart" method="get">My Cart</a></li>
-                            <li><a asp-controller="Account" asp-action="Orders" method="get">My Orders</a></li>
-                            <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
-                        </ul>
-                    </li>
-                }
-                else 
-                {
-                    <li class="dropdown"><a asp-controller="Account" asp-action="Login" method="get" class="trigger-drop">Login</a></li>
-                }
-
-
-
-            </ul>
         </nav>
 
     -->
@@ -115,21 +76,39 @@
             <a asp-controller="Account" asp-action="Login">Login</a>
         }
 
-        <a href="w3_responsive_topnav.html">News</a>
-        <a href="#">Contact</a>
+        @{ string isAdmin = Context.Session.GetString("isUserAdmin"); }
+
+        @if (isAdmin != null && isAdmin.Equals("Y") && User.Identity.IsAuthenticated && User.HasClaim(ClaimTypes.Role, "Admin"))
+        {
+            <div class="dropdown">
+                <button class="dropbtn">
+                    Administration
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a asp-controller="Users" asp-action="Index" method="get">Manage Users</a>
+                    <a asp-controller="Products" asp-action="Index" method="get">Manage Products</a>
+                    <a asp-controller="Orders" asp-action="Index" method="get">Manage Orders</a>
+                    <a asp-controller="Branches" asp-action="Index" method="get">Manage Branches</a>
+                    <a asp-controller="Tags" asp-action="Index" method="get">Manage Tags</a>
+                    <a asp-controller="Statistics" asp-action="Index" method="get">Statistics</a>
+                </div>
+            </div>
+        }
+
         <div class="dropdown">
             <button class="dropbtn">
                 Products
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="w3_sticky.html">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
-                <a href="#">&#9776;</a>
+                <a href="#">All Products</a>
+                <a href="#">Find Product</a>
             </div>
         </div>
-        <a href="#">About</a>
+
+        <a href="/games">Score</a>
+        <a href="/home/about">About</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
 
