--- a/ShikShaq/wwwroot/css/site.css
+++ b/ShikShaq/wwwroot/css/site.css
@@ -3,6 +3,7 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #e2e1e1;
 }
 
 /* Wrapping element */
@@ -35,3 +36,4 @@ body {
         display: none;
     }
 }
+
