--- a/ShikShaq/Views/Products/Create.cshtml
+++ b/ShikShaq/Views/Products/Create.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input type="file" id="files" asp-for="Image" />
+                <input type="file" id="files" asp-for="Image" accept="image/*" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
