--- a/ShikShaq/Views/Products/Edit.cshtml
+++ b/ShikShaq/Views/Products/Edit.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input type="file" id="files" asp-for="Image" />
+                <input type="file" id="files" asp-for="Image"  accept="image/*" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
