--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -88,6 +88,7 @@
                 <div class="dropdown-content">
                     <a asp-controller="Users" asp-action="Index" method="get">Manage Users</a>
                     <a asp-controller="Products" asp-action="Index" method="get">Manage Products</a>
+                    <a asp-controller="ProductInBranches" asp-action="Index" method="get">Manage Products In Branches</a>
                     <a asp-controller="Orders" asp-action="Index" method="get">Manage Orders</a>
                     <a asp-controller="Branches" asp-action="Index" method="get">Manage Branches</a>
                     <a asp-controller="Tags" asp-action="Index" method="get">Manage Tags</a>
