--- a/ShikShaq/Views/ProductInBranches/Create.cshtml
+++ b/ShikShaq/Views/ProductInBranches/Create.cshtml
@@ -17,6 +17,16 @@
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Product" class="control-label"></label>
+                <select name="ProductId" class="form-control" asp-items="@ViewBag.Products"></select>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Branch" class="control-label"></label>
+                <select name="BranchId" class="form-control" asp-items="@ViewBag.Branches"></select>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
