--- a/ShikShaq/Views/ProductInBranches/Details.cshtml
+++ b/ShikShaq/Views/ProductInBranches/Details.cshtml
@@ -16,9 +16,26 @@
         <dd>
             @Html.DisplayFor(model => model.Quantity)
         </dd>
+        <dt>
+            Product Name
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Product.Name)
+        </dd>
+        <dt>
+            Branch Name
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Branch.Name)
+        </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Styles
+{
+    <link href="~/css/details.css" rel="stylesheet" type="text/css">
+}
