--- a/ShikShaq/Views/ProductInBranches/Edit.cshtml
+++ b/ShikShaq/Views/ProductInBranches/Edit.cshtml
@@ -19,6 +19,15 @@
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Product" class="control-label"></label>
+                <select name="ProductId" class="form-control" asp-items="@ViewBag.Products"></select>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Branch" class="control-label"></label>
+                <select name="BranchId" class="form-control" asp-items="@ViewBag.Branches"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
