add branch choosing

--- a/ShikShaq/Views/Account/Cart.cshtml
+++ b/ShikShaq/Views/Account/Cart.cshtml
@@ -61,7 +61,7 @@
 
     <div class="select">
         <select name="slct" id="slct">
-            <option selected disabled>Choose a branch</option>
+            <option value="-1" selected disabled>Choose a branch</option>
 
             @foreach (var item in Model.Item2)
             {
